# 353FinalProject

tensegrity_shoulder/: .gitignore  README.md  pyproject.toml
tensegrity_shoulder/model/: scene.xml  shoulder.xml
tensegrity_shoulder/model/assets/: wing.stl
tensegrity_shoulder/src/: __init__.py  graph.py  simulate.py
