[project]
name = "tensegrity-shoulder"
version = "0.1.0"
description = "Self-contained single tensegrity shoulder joint simulation with motor actuators and graph-based state sampling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "mujoco>=3.4.0",
    "numpy>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
